# MCTS_c2r

./: .gitignore  ARCHITECTURE.md  Blog.md  CRust_Training_Colab.ipynb  Dockerfile  MODEL_CARD.md  README.md  README_SPACE.md  gen_plot.py  openenv.yaml  real_training_data.json  requirements.txt  run_lac2r_demo.py
crust_env/: Dockerfile  __init__.py  api.py  client.py  docker-compose.yml  env.py  install_docker.ps1  metrics.py  requirements.txt  scheduler.py  train.py  trainer_daemon.py  verifier.py
crust_env/dummy_workspace/: Cargo.toml
crust_env/dummy_workspace/src/: data_store.rs  lib.rs  math_ops.rs  string_ops.rs  target_service.rs
crust_env/dummy_workspace/tests/: integration_test.rs
crust_env/lac2r/: __init__.py  llm_refiner.py  mcts.py  program_context.py  rag.py  rl_bridge.py  safety_reward.py  service.py  unsafe_constructs.py
crust_env/legacy_c/include/: data_store.h  math_ops.h  string_ops.h
crust_env/legacy_c/src/: data_store.c  math_ops.c  string_ops.c  target_service.c
