[package]
name = "crust_workspace"
version = "0.1.0"
edition = "2021"
description = "CRust migration target — Rust equivalents of the legacy C modules"

# No external dependencies by default — the agent must maintain CBO < 3.
# Adding external crates here would increase the CBO score and trigger penalties.
[dependencies]

[dev-dependencies]
# No test dependencies either — keeps the environment isolated and reproducible.

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"
